更新 Matrix3.conf

--- a/Loon/Matrix3.conf
+++ b/Loon/Matrix3.conf
@@ -1,63 +1,56 @@
+# > Quantumult-X 矩阵配置 Author:Matrix3
+# > 更新时间:2023-05-01 09:15 UTC/GMT +8
 [General]
 # > 接口模式
 interface-mode = auto
 
-# > 跳过代理
-skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,e.crashlynatics.com,www.baidu.com,yunbusiness.ccb.com
-
 # > IPv6支持
 ipv6 = true
+
+# > 跳过代理
+skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,e.crashlynatics.com,www.baidu.com,yunbusiness.ccb.com
 
 # > 旁路隧道
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 
 # > DNS服务器
-dns-server = 119.29.29.29,114.114.114.114,223.5.5.5
+dns-server = 119.29.29.29,223.5.5.5
 
 # > DoH服务器
 doh-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
 
-# > DoQ服务器
-doq-server = quic://162.14.132.109:853, quic://south.tex0n.net:785 
-
 # > 数据库
 geoip-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 
-# > DoH3服务器
-# doh3-server =
- 
-# > 是否允许wifi下共享网络
+# > 允许 wifi 访问
 allow-wifi-access = false
 
-# > wifi共享开启时http服务的端口
+# > wifi 访问 http 端口
 wifi-access-http-port = 7222
 
-# > wifi共享开启时socks5服务的端口
+# > wifi 访问 socks5 端口
 wifi-access-socks5-port = 7221
 
-# > 节点测速时的网址
+# > 代理测试网址
 proxy-test-url = http://cp.cloudflare.com/generate_204
 
-# > 节点测速时的超时秒数
+# > 测试超时
 test-timeout = 3
 
 # > 资源解析器
 resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/dist/sub-store-parser.loon.min.js
 
-# > SSID触发器
-# ssid-trigger = SSID:DIRECT
-
-# 以下配置的域名不会使用fakeip进行映射
+# > 真实IP
 real-ip = *.apple.com, *apple.com
 
-# 一个节点连续失败几次后进行节点切换
+# > 失败次数后切换节点
 switch-node-after-failure-times = 3
 
 [Proxy]
-# > 本地节点
+# > 代理
 
 [Remote Proxy]
-# > 订阅节点
+# > 远程代理
 
 [Remote Filter]
 # > 全部节点
@@ -87,12 +80,6 @@ switch-node-after-failure-times = 3
 
 # > 苹果服务
 苹果服务 = select,DIRECT,REJECT,自行选择,自动选择,香港节点,台湾节点,日本节点,韩国节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
-
-# > 网易音乐
-网易音乐 = select,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.png
-
-# > 速度测试
-速度测试 = select,DIRECT,REJECT,自行选择,自动选择,香港节点,台湾节点,日本节点,韩国节点,狮城节点,美国节点,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Speedtest.png
 
 # > 港台番剧
 港台番剧 = select,DIRECT,REJECT,自行选择,自动选择,香港节点,台湾节点,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
@@ -131,64 +118,39 @@ switch-node-after-failure-times = 3
 美国节点 = url-test,美国,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 
 [Rule]
-# > 本地规则:最终规则
-GEOIP,CN,DIRECT
+# > 最终规则
 FINAL,黑白名单
 
 [Remote Rule]
-# > 远程规则:规则修正
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Direct/Direct.list, policy=DIRECT, tag=规则修正, enabled=true
+# > 规则修正
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rule/Unbreak.list, policy=DIRECT, tag=规则修正, enabled=true
 
-# > 远程规则:广告拦截
+# > 广告拦截
 https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt, policy=REJECT, tag=广告拦截, enabled=true
 
-# > 远程规则:微信直连
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=true
+# > 国际抖音
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rule/TikTok.list, policy=国际媒体, tag=国际抖音, enabled=true
 
-# > 远程规则:网易音乐
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/NetEaseMusic/NetEaseMusic.list, policy=网易音乐, tag=网易音乐, enabled=true
+# > 国际媒体
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rule/Streaming.list, policy=国际媒体, tag=国际媒体, enabled=true
 
-# > 远程规则:速度测试
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=速度测试, tag=速度测试, enabled=true
+# > 港台番剧
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rule/StreamingSE.list, policy=港台番剧, tag=哔哩哔哩, enabled=true
 
-# > 远程规则:推特规则
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Twitter/Twitter.list, policy=全球加速, tag=推特规则, enabled=true
+# > 国内媒体
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rule/StreamingCN.list, policy=国内媒体, tag=国内媒体, enabled=true
 
-# > 远程规则:电报规则
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Telegram/Telegram.list, policy=全球加速, tag=电报规则, enabled=true
+# > 全球加速
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rule/Global.list, policy=全球加速, tag=全球加速, enabled=true
 
-# > 远程规则:脸书规则
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Facebook/Facebook.list, policy=全球加速, tag=脸书规则, enabled=true
+# > 苹果服务
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rule/Apple.list, policy=苹果服务, tag=苹果服务, enabled=true
 
-# > 远程规则:国际抖音
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/TikTok/TikTok.list, policy=国际媒体, tag=国际抖音, enabled=true
+# > 局域网络
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rule/LAN.list, policy=DIRECT, tag=局域网络, enabled=true
 
-# > 远程规则:国际媒体
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=国际媒体, tag=国际媒体, enabled=true
-
-# > 远程规则:国际媒体
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia_Domain.list, policy=国际媒体, tag=国际媒体, enabled=true
-
-# > 远程规则:哔哩哔哩
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/BiliBili/BiliBili.list, policy=港台番剧, tag=哔哩哔哩, enabled=true
-
-# > 远程规则:国内抖音
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/DouYin/DouYin.list, policy=国内媒体, tag=国内抖音, enabled=true
-
-# > 远程规则:国内媒体
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaMedia/ChinaMedia.list, policy=国内媒体, tag=国内媒体, enabled=true
-
-# > 远程规则:苹果服务
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=苹果服务, tag=苹果服务, enabled=true
-
-# > 远程规则:苹果服务
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple_Domain.list, policy=苹果服务, tag=苹果服务, enabled=true
-
-# > 远程规则:全球加速
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Global/Global.list, policy=全球加速, tag=全球加速, enabled=true
-
-# > 远程规则:全球加速
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Global/Global_Domain.list, policy=全球加速, tag=全球加速, enabled=true
+# > 国内规则
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rule/GeoIPCN.list, policy=DIRECT, tag=国内规则, enabled=true
 
 [Rewrite]
 # > 重写
