更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,5 +1,5 @@
 # > Quantumult-X 懒人配置 Author:Matrix3
-# > 更新时间:2023-04-27 00:05 UTC/GMT +8
+# > 更新时间:2023-05-01 11:00 UTC/GMT +8
 [general]
 # > 服务器检查
 server_check_url=http://www.gstatic.com/generate_204
@@ -89,40 +89,40 @@ FINAL, 黑白名单
 
 [filter_remote]
 # > 规则修正
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Unbreak.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/Unbreak.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
 # > 广告拦截
-https://raw.githubusercontent.com/fmz200/wool_scripts/main/QuantumultX/filter/fenliu.list, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
 
 # > OpenAI
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/OpenAI.list, tag=Open_AI, force-policy=美国节点, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/OpenAI.list, tag=Open_AI, force-policy=美国节点, update-interval=172800, opt-parser=false, enabled=true
 
 # > 网络测速
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Speedtest.list, tag=网络测速, force-policy=全球加速, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/Speedtest.list, tag=网络测速, force-policy=全球加速, update-interval=172800, opt-parser=false, enabled=true
 
 # > 国际抖音
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/TikTok.list, tag=国际抖音, force-policy=国际媒体, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/TikTok.list, tag=国际抖音, force-policy=国际媒体, update-interval=172800, opt-parser=false, enabled=true
 
 # > 国际媒体
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Streaming.list, tag=国际媒体, force-policy=国际媒体, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/Streaming.list, tag=国际媒体, force-policy=国际媒体, update-interval=172800, opt-parser=false, enabled=true
 
 # > 港台番剧
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingSE.list, tag=港台番剧, force-policy=港台番剧, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/StreamingSE.list, tag=港台番剧, force-policy=港台番剧, update-interval=172800, opt-parser=false, enabled=true
 
 # > 国内影视
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingCN.list, tag=国内影视, force-policy=国内影视, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/StreamingCN.list, tag=国内影视, force-policy=国内影视, update-interval=172800, opt-parser=false, enabled=true
 
 # > 全球加速
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Global.list, tag=全球加速, force-policy=全球加速, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/Global.list, tag=全球加速, force-policy=全球加速, update-interval=172800, opt-parser=false, enabled=true
 
 # > 苹果服务
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Apple.list, tag=苹果服务, force-policy=苹果服务, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/Apple.list, tag=苹果服务, force-policy=苹果服务, update-interval=172800, opt-parser=false, enabled=true
 
 # > 局域网络
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/LAN.list, tag=局域网络, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/LAN.list, tag=局域网络, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
 # > 国内规则
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/GeoIPCN.list, tag=国内规则, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/GeoIPCN.list, tag=国内规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
 [rewrite_local]
 # > TF限制解除
