--- a/Stash/Matrix3.yaml
+++ b/Stash/Matrix3.yaml
@@ -1,9 +1,11 @@
-# > 订阅的信息展示
-subscribe-url: 🔴订阅链接🟢
+# > Stash 矩阵配置 Author:Matrix3
+# > 更新时间:2023-05-01 11:00 UTC/GMT +8
+# > 订阅的信息
+subscribe-url: 🟢订阅链接🔴
 
 # > 远程服务器
 proxy-providers:
-  服务提供商-1:
+  MATRIX-1:
     url: 🔴订阅链接🟢
     interval: 600
 
@@ -32,28 +34,6 @@ proxy-groups:
       - 狮城节点
       - 美国节点
 
-# > 策略组:网易音乐
-  - name: 网易音乐
-    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music.png
-    type: select
-    proxies: &proxies
-      - DIRECT
-
-# > 策略组:速度测试
-  - name: 速度测试
-    icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/Speedtest.png
-    type: select
-    proxies: &proxies
-      - DIRECT
-      - 自行选择
-      - 自动选择
-      - 香港节点
-      - 台湾节点
-      - 日本节点
-      - 韩国节点
-      - 狮城节点
-      - 美国节点
-
 # > 策略组:港台番剧
   - name: 港台番剧
     icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingSE.png
@@ -69,8 +49,8 @@ proxy-groups:
       - 狮城节点
       - 美国节点
 
-# > 策略组:国内媒体
-  - name: 国内媒体
+# > 策略组:国内影视
+  - name: 国内影视
     icon: https://raw.githubusercontent.com/Orz-3/mini/master/Color/StreamingCN.png
     type: select
     proxies: &proxies
@@ -206,163 +186,93 @@ proxy-groups:
     include-all: true
 
 rules:
-# > 本地规则:规则修正
+# > 规则修正
   - RULE-SET, 规则修正, DIRECT
 
-# > 本地规则:广告拦截
+# > 广告拦截
   - RULE-SET, 广告拦截, REJECT
 
-# > 本地规则:隐私保护
-  - RULE-SET, 隐私保护, REJECT
+# > 网络测速
+  - RULE-SET, 网络测速, 全球加速
 
-# > 本地规则:运营劫持
-  - RULE-SET, 运营劫持, REJECT
-
-# > 本地规则:微信直连
-  - RULE-SET, 微信直连, DIRECT
-
-# > 本地规则:网易音乐
-  - RULE-SET, 网易音乐, 网易音乐
-
-# > 本地规则:速度测试
-  - RULE-SET, 速度测试, 速度测试
-
-# > 本地规则:推特规则
-  - RULE-SET, 推特规则, 全球加速
-
-# > 本地规则:电报规则
-  - RULE-SET, 电报规则, 全球加速
-
-# > 本地规则:脸书规则
-  - RULE-SET, 脸书规则, 全球加速
-
-# > 本地规则:国际抖音
+# > 国际抖音
   - RULE-SET, 国际抖音, 国际媒体
 
-# > 本地规则:国际媒体
+# > 国际媒体
   - RULE-SET, 国际媒体, 国际媒体
 
-# > 本地规则:哔哩哔哩
-  - RULE-SET, 哔哩哔哩, 港台番剧
+# > 港台番剧
+  - RULE-SET, 港台番剧, 港台番剧
 
-# > 本地规则:国内抖音
-  - RULE-SET, 国内抖音, 国内媒体
+# > 国内影视
+  - RULE-SET, 国内影视, 国内影视
 
-# > 本地规则:国内媒体
-  - RULE-SET, 国内媒体, 国内媒体
+# > 全球加速
+  - RULE-SET, 全球加速, 全球加速
 
-# > 本地规则:苹果服务
+# > 苹果服务
   - RULE-SET, 苹果服务, 苹果服务
 
-# > 本地规则:国外网站
-  - RULE-SET, 国外网站, 全球加速
+# > 国内规则
+  - GEOIP, CN, DIRECT
 
-# > 本地规则:默认规则
-  - GEOIP,CN,DIRECT
+# > 最终规则
   - MATCH,黑白名单
 
 rule-providers:
-# > 远程规则:规则修正
+# > 规则修正
   规则修正:
     behavior: classical
     interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.yaml
+    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Rule/Unbreak.yaml
 
-# > 远程规则:广告拦截
+# > 广告拦截
   广告拦截:
     behavior: classical
     interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite_Classical.yaml
+    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising_Classical.yaml
 
-# > 远程规则:隐私保护
-  隐私保护:
+# > 网络测速
+  网络测速:
     behavior: classical
     interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy_Classical.yaml
+    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Rule/Speedtest.yaml
 
-# > 远程规则:运营劫持
-  运营劫持:
-    behavior: classical
-    interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.yaml
-
-# > 远程规则:微信直连
-  微信直连:
-    behavior: classical
-    interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChat/WeChat.yaml
-
-# > 远程规则:网易音乐
-  网易音乐:
-    behavior: classical
-    interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.yaml
-
-# > 远程规则:速度测试
-  速度测试:
-    behavior: classical
-    interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest.yaml
-
-# > 远程规则:推特规则
-  推特规则:
-    behavior: classical
-    interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.yaml
-
-# > 远程规则:电报规则
-  电报规则:
-    behavior: classical
-    interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
-
-# > 远程规则:脸书规则
-  脸书规则:
-    behavior: classical
-    interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Facebook/Facebook.yaml
-
-# > 远程规则:国际抖音
+# > 国际抖音
   国际抖音:
     behavior: classical
     interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.yaml
+    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Rule/TikTok.yaml
 
-# > 远程规则:国际媒体
+# > 国际媒体
   国际媒体:
     behavior: classical
     interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml
+    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Rule/Streaming.yaml
 
-# > 远程规则:哔哩哔哩
-  哔哩哔哩:
+# > 港台番剧
+  港台番剧:
     behavior: classical
     interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
+    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Rule/StreamingSE.yaml
 
-# > 远程规则:国内抖音
-  国内抖音:
+# > 国内影视
+  国内影视:
     behavior: classical
     interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DouYin/DouYin.yaml
+    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Rule/StreamingCN.yaml
 
-# > 远程规则:国内媒体
-  国内媒体:
+# > 全球加速
+  全球加速:
     behavior: classical
     interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.yaml
+    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Rule/Global.yaml
 
-# > 远程规则:苹果服务
+# > 苹果服务
   苹果服务:
     behavior: classical
     interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Classical.yaml
-
-# > 远程规则:国外网站
-  国外网站:
-    behavior: classical
-    interval: 86400
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Classical.yaml
+    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Rule/Apple.yaml
 
 # > 脚本
 script:
@@ -372,7 +282,6 @@ script:
 # > DNS
 dns:
   default-nameserver:
-    - 114.114.114.114
     - 119.29.29.29
     - 223.5.5.5
   nameserver:
