--- a/Surge/Matrix3.conf
+++ b/Surge/Matrix3.conf
@@ -1,14 +1,16 @@
+# > Surge 矩阵配置 Author:Matrix3
+# > 更新时间:2023-05-01 11:00 UTC/GMT +8
 [General]
-# > 日志等级
+# > 日志级别
 loglevel = notify
 
-# > 测速超时
+# > 测试超时
 test-timeout = 3
 
-# > 网络诊断
+# > 互联网测试网址
 internet-test-url = http://Apple.com
 
-# > 代理测速
+# > 代理测试网址
 proxy-test-url = http://cp.cloudflare.com/generate_204
 
 # > 排除简单主机名
@@ -18,7 +20,10 @@ exclude-simple-hostnames = true
 ipv6 = false
 
 # > DNS 服务器
-dns-server = 223.5.5.5, 119.29.29.29, 114.114.114.114
+dns-server = 223.5.5.5, 119.29.29.29
+
+# > 加密 DNS 服务器
+encrypted-dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-query
 
 # > Wi-Fi 助理
 wifi-assist = false
@@ -26,20 +31,35 @@ wifi-assist = false
 # > GEOIP 数据库
 geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 
-# > 拒绝页面显示错误
+# > 显示拒绝的错误页面
 show-error-page-for-reject = true
 
 # > 跳过代理
 skip-proxy = www.abchina.com.cn, localhost, *.local, injections.adguard.org, local.adguard.org, captive.apple.com, guzzoni.apple.com, 0.0.0.0/8, 10.0.0.0/8, 17.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.168.0.0/16, 192.88.99.0/24, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 240.0.0.0/4, 255.255.255.255/32
 
-# > 提供代理服务器/服务器端口
-allow-wifi-access = true
-wifi-access-http-port = 8833
+# > 允许 wifi 访问
+allow-wifi-access = false
+
+# > wifi 访问 http 端口
+wifi-access-http-port = 5588
+
+# > wifi 访问 socks5 端口
 wifi-access-socks5-port = 8855
+
+# > 允许热点访问
 allow-hotspot-access = false
+
+# > http api
 http-api = lmcfmy20@127.0.0.1:3355
+
+# > http api tls
 http-api-tls = false
+
+# > http api 网络仪表板
 http-api-web-dashboard = false
+
+# > udp优先级
+udp-priority = false
 
 [Replica]
 # > 隐藏苹果请求
@@ -58,107 +78,93 @@ hide-udp = 0
 hide-crash-reporter-request = 0
 
 [Proxy Group]
-# 自行选择
+# > 自行选择
 自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=🔴订阅链接🟢
 
-# 自动选择
+# > 自动选择
 自动选择 = url-test, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, include-other-group=自行选择
 
-# 苹果服务
+# > 苹果服务
 苹果服务 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 
-# 谷歌服务
-谷歌服务 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
-
-# 速度测试
-速度测试 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
-
-# 港台番剧
+# > 港台番剧
 港台番剧 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 
-# 国内媒体
-国内媒体 = select, DIRECT, REJECT, no-alert=0, hidden=0, include-all-proxies=0
+# > 国内影视
+国内影视 = select, DIRECT, REJECT, no-alert=0, hidden=0, include-all-proxies=0
 
-# 国际媒体
+# > 国际媒体
 国际媒体 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 
-# 全球加速
+# > 全球加速
 全球加速 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 
-# 黑白名单
+# > 黑白名单
 黑白名单 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 
-# 香港节点
+# > 香港节点
 香港节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(香港|港|HK|(?i)HongKong))^((?!(台湾|日本|韩国|新加坡|美国)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
 
-# 台湾节点
+# > 台湾节点
 台湾节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(台湾|台|TW|(?i)Taiwan))^((?!(香港|日本|韩国|新加坡|美国)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
 
-# 日本节点
+# > 日本节点
 日本节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(日本|日|JP|(?i)Japan))^((?!(香港|台湾|韩国|新加坡|美国)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
 
-# 韩国节点
+# > 韩国节点
 韩国节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(韩国|韩|KR|(?i)SouthKorea))^((?!(香港|台湾|日本|新加坡|美国)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
 
-# 狮城节点
+# > 狮城节点
 狮城节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(新加坡|狮|SG|(?i)Singapore))^((?!(香港|台湾|日本|韩国|美国)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
 
-# 美国节点
+# > 美国节点
 美国节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(美国|美|US|(?i)UnitedStates))^((?!(香港|台湾|日本|韩国|新加坡)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
 
 [Rule]
 # > 规则修正
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Direct/Direct.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Unbreak.list,DIRECT // 规则修正
 
 # > 广告拦截
-RULE-SET,https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt,REJECT
+RULE-SET,https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt,REJECT //广告拦截
 
-# > 微信直连
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/WeChat/WeChat_Resolve.list,DIRECT
-
-# > 速度测试
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list,速度测试
+# > 网络测速
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Speedtest.list,全球加速 // 网络测速
 
 # > 国际抖音
-RULE-SET,https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Surge/TikTok.list,国际媒体
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/TikTok.list,国际媒体 // 国际抖音
 
 # > 国际媒体
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Domain.list,国际媒体
-
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Resolve.list,国际媒体
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Streaming.list,国际媒体 // 国际媒体
 
 # > 港台番剧
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list,港台番剧
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingSE.list,港台番剧 // 港台番剧
 
-# > 国内抖音
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/DouYin/DouYin.list,国内媒体
-
-# > 国内媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMedia/ChinaMedia.list,国内媒体
-
-# > 苹果服务
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_Domain.list,苹果服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Apple/Apple_Resolve.list,苹果服务
-
-# > 谷歌服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list,谷歌服务
+# > 国内影视
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingCN.list,国内影视 // 国内影视
 
 # > 全球加速
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,全球加速
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Resolve.list,全球加速
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Global.list,全球加速 // 全球加速
+
+# > 苹果服务
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Apple.list,苹果服务 // 苹果服务
 
 # > 局域网络
-RULE-SET,LAN,DIRECT
+RULE-SET,LAN,DIRECT // 局域网络
+
+# > 国内规则
+GEOIP,CN,DIRECT // 国内规则
 
 # > 最终规则
-GEOIP,CN,DIRECT
 FINAL,黑白名单
 
 [URL Rewrite]
-# > 重写
+# > 网址重写
 ^https?://(www.)?(g|google).cn https://www.google.com 302
 
 [MITM]
+# > H2开启/关闭
+h2 = true
+
 # > 生成证书会生成CA-PASSPHRASE与CA-P12信息
-# ca-passphrase = 
-# ca-p12 = 
+ca-passphrase = 
+ca-p12 = 
