更新 Matrix3.conf

--- a/Shadowrocket/Matrix3.conf
+++ b/Shadowrocket/Matrix3.conf
@@ -1,3 +1,5 @@
+# > Shadowrocket 矩阵配置 Author:Matrix3
+# > 更新时间:2023-05-01 11:00 UTC/GMT +8
 [General]
 # > 旁路系统
 bypass-system = true
@@ -41,6 +43,9 @@ dns-direct-fallback-proxy = true
 # > UDP策略不支持行为
 udp-policy-not-supported-behaviour = REJECT
 
+# > 更新网址
+update-url = https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Matrix3.conf
+
 [Proxy Group]
 # > 苹果服务
 苹果服务 = select,DIRECT,自动选择,香港节点,台湾节点,日本节点,韩国节点,狮城节点,美国节点,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
@@ -48,7 +53,7 @@ udp-policy-not-supported-behaviour = REJECT
 # > 港台番剧
 港台番剧 = select,DIRECT,香港节点,台湾节点,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 
-# > 国内媒体
+# > 国内影视
 国内媒体 = select,DIRECT,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 
 # > 国际媒体
@@ -61,66 +66,72 @@ udp-policy-not-supported-behaviour = REJECT
 黑白名单 = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点,韩国节点,狮城节点,美国节点,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 
 # > 自动选择
-自动选择 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=^(.(?!(〃◉′ω`◉〃)))*$
+自动选择 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=^
 
 # > 香港节点
-香港节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=(?=.*(香港|港|HK|(?i)HongKong))^((?!(台湾|日本|韩国|新加坡|美国)).)*$
+香港节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=香港|港|HK|(?i)HongKong
 
 # > 台湾节点
-台湾节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=(?=.*(台湾|台|TW|(?i)Taiwan))^((?!(香港|日本|韩国|新加坡|美国)).)*$
+台湾节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=台湾|台|TW|(?i)Taiwan
 
 # > 日本节点
-日本节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=(?=.*(日本|日|JP|(?i)Japan))^((?!(香港|台湾|韩国|新加坡|美国)).)*$
+日本节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=日本|日|JP|(?i)Japan
 
 # > 韩国节点
-韩国节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=(?=.*(韩国|韩|KR|(?i)SouthKorea))^((?!(香港|台湾|日本|新加坡|美国)).)*$
+韩国节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=韩国|韩|KR|(?i)SouthKorea
 
 # > 狮城节点
-狮城节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=(?=.*(新加坡|狮|SG|(?i)Singapore))^((?!(香港|台湾|日本|韩国|美国)).)*$
+狮城节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=新加坡|狮|SG|(?i)Singapore
 
 # > 美国节点
-美国节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=(?=.*(美国|美|US|(?i)UnitedStates))^((?!(香港|台湾|日本|韩国|新加坡)).)*$
+美国节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=美国|美|US|(?i)UnitedStates
 
 [Rule]
 # > 规则修正
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Direct/Direct.list,DIRECT
+RULE-SET, https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Rule/Unbreak.list,DIRECT
 
 # > 广告拦截
 RULE-SET,https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt,REJECT
 
-# > 微信直连
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/WeChat/WeChat.list,DIRECT
+# > 网络测速
+RULE-SET, https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Rule/Speedtest.list,全球加速
 
 # > 国际抖音
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,国际媒体
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Rule/TikTok.list,国际媒体
 
 # > 国际媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GlobalMedia/GlobalMedia.list,国际媒体
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GlobalMedia/GlobalMedia_Domain.list,国际媒体
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Rule/Streaming.list,国际媒体
 
 # > 港台番剧
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,港台番剧
+RULE-SET, https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Rule/StreamingSE.list,港台番剧
 
-# > 国内媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaMedia/ChinaMedia.list,国内媒体
+# > 国内影视
+RULE-SET, https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Rule/StreamingCN.list,国内影视
+
+# > 全球加速
+RULE-SET, https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Rule/Global.list,全球加速
 
 # > 苹果服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,苹果服务
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple_Domain.list,苹果服务
-# > 全球加速
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global.list,全球加速
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global_Domain.list,全球加速
+RULE-SET, https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Rule/Apple.list,苹果服务
 
-# > LAN
-IP-CIDR,192.168.0.0/16,DIRECT
-IP-CIDR,10.0.0.0/8,DIRECT
-IP-CIDR,172.16.0.0/12,DIRECT
-IP-CIDR,127.0.0.0/8,DIRECT
+# > 局域网络
+DOMAIN-SUFFIX, local
+IP-CIDR, 0.0.0.0/8
+IP-CIDR, 10.0.0.0/8
+IP-CIDR, 224.0.0.0/4
+IP-CIDR, 127.0.0.0/8
+IP-CIDR, 192.0.0.0/24
+IP-CIDR, 192.0.2.0/24
+IP-CIDR, 100.64.0.0/10
+IP-CIDR, 172.16.0.0/12
+IP-CIDR, 169.254.0.0/16
+IP-CIDR, 192.168.0.0/16
+# IP-CIDR6, fe80::/10
 
-# > China
+# > 国内规则
 GEOIP,CN,DIRECT
 
-# > Final
+# > 最终规则
 FINAL,黑白名单
 
 [Host]
@@ -134,8 +145,8 @@ localhost = 127.0.0.1
 
 [MITM]
 # > 生成证书会生成CA-PASSPHRASE与CA-P12信息
-# ca-passphrase = 
-# ca-p12 = 
+# ca-passphrase =
+# ca-p12 =
 
 # > ENABLE
 enable = true
