更新 Matrix3.conf

--- a/Shadowrocket/Matrix3.conf
+++ b/Shadowrocket/Matrix3.conf
@@ -1,5 +1,5 @@
 # > Shadowrocket 矩阵配置 Author:Matrix3
-# > 更新时间:2023-05-01 11:00 UTC/GMT +8
+# > 更新时间:2023-05-01 11:30 UTC/GMT +8
 [General]
 # > 旁路系统
 bypass-system = true
@@ -115,18 +115,18 @@ RULE-SET, https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/
 RULE-SET, https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Rule/Apple.list,苹果服务
 
 # > 局域网络
-DOMAIN-SUFFIX, local
-IP-CIDR, 0.0.0.0/8
-IP-CIDR, 10.0.0.0/8
-IP-CIDR, 224.0.0.0/4
-IP-CIDR, 127.0.0.0/8
-IP-CIDR, 192.0.0.0/24
-IP-CIDR, 192.0.2.0/24
-IP-CIDR, 100.64.0.0/10
-IP-CIDR, 172.16.0.0/12
-IP-CIDR, 169.254.0.0/16
-IP-CIDR, 192.168.0.0/16
-# IP-CIDR6, fe80::/10
+DOMAIN-SUFFIX, local, DIRECT
+IP-CIDR, 0.0.0.0/8, DIRECT
+IP-CIDR, 10.0.0.0/8, DIRECT
+IP-CIDR, 224.0.0.0/4, DIRECT
+IP-CIDR, 127.0.0.0/8, DIRECT
+IP-CIDR, 192.0.0.0/24, DIRECT
+IP-CIDR, 192.0.2.0/24, DIRECT
+IP-CIDR, 100.64.0.0/10, DIRECT
+IP-CIDR, 172.16.0.0/12, DIRECT
+IP-CIDR, 169.254.0.0/16, DIRECT
+IP-CIDR, 192.168.0.0/16, DIRECT
+# IP-CIDR6, fe80::/10, DIRECT
 
 # > 国内规则
 GEOIP,CN,DIRECT
