更新 Matrix3.conf

--- a/Shadowrocket/Matrix3.conf
+++ b/Shadowrocket/Matrix3.conf
@@ -1,5 +1,5 @@
 # > Shadowrocket 矩阵配置 Author:Matrix3
-# > 更新时间:2023-05-01 11:30 UTC/GMT +8
+# > 更新时间:2023-05-01 17:10 UTC/GMT +8
 [General]
 # > 旁路系统
 bypass-system = true
@@ -17,7 +17,7 @@ dns-server = 223.5.5.5, 119.29.29.29
 fallback-dns-server = system
 
 # > IPv6
-ipv6 = true
+ipv6 = false
 
 # > 强制IPv6
 prefer-ipv6 = false
@@ -54,7 +54,7 @@ update-url = https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Mast
 港台番剧 = select,DIRECT,香港节点,台湾节点,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 
 # > 国内影视
-国内媒体 = select,DIRECT,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
+国内影视 = select,DIRECT,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 
 # > 国际媒体
 国际媒体 = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点,韩国节点,狮城节点,美国节点,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
