更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,5 +1,5 @@
 # > 矩阵配置:QuantumultX  Author:Matrix3
-# > 更新时间:2023-05-18 19:23 UTC/GMT +8
+# > 更新时间:2023-05-18 20:23 UTC/GMT +8
 [general]
 # > 服务器检查
 server_check_url=http://www.gstatic.com/generate_204
@@ -91,8 +91,11 @@ FINAL, 黑白名单
 # > 规则修正
 https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/Unbreak.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
+# > 微信规则
+https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/WeChat.list, tag=微信规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
+
 # > 广告拦截
-https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-quanx.txt, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=false, enabled=true
 
 # > 网络测速
 https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/Speedtest.list, tag=网络测速, force-policy=全球加速, update-interval=172800, opt-parser=false, enabled=true
