更新 Matrix3.conf

--- a/Loon/Matrix3.conf
+++ b/Loon/Matrix3.conf
@@ -1,5 +1,5 @@
-# > Loon 矩阵配置 Author:Matrix3
-# > 更新时间:2023-05-01 11:00 UTC/GMT +8
+# > 矩阵配置:Loon         Author:Matrix3
+# > 更新时间:2023-05-23 00:00 UTC/GMT +8
 [General]
 # > 接口模式
 interface-mode = auto
@@ -20,7 +20,7 @@ dns-server = 119.29.29.29,223.5.5.5
 doh-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
 
 # > 数据库
-geoip-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+geoip-url = https://github.com/Masaiki/GeoIP2-CN/raw/release/Country.mmdb
 
 # > 允许 wifi 访问
 allow-wifi-access = false
