更新 Matrix3.conf

--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,5 +1,5 @@
 # > 矩阵配置:QuantumultX  Author:Matrix3
-# > 更新时间:2023-05-18 20:23 UTC/GMT +8
+# > 更新时间:2023-05-23 00:45 UTC/GMT +8
 [general]
 # > 服务器检查
 server_check_url=http://www.gstatic.com/generate_204
@@ -91,9 +91,6 @@ FINAL, 黑白名单
 # > 规则修正
 https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/Unbreak.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
 
-# > 微信规则
-https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/Rule/WeChat.list, tag=微信规则, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
-
 # > 广告拦截
 https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-quanx.txt, tag=广告拦截, force-policy=reject, update-interval=172800, opt-parser=false, enabled=true
 
@@ -175,7 +172,7 @@ event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/
 event-interaction https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/NodeLinkCheck/Script/NodeLinkCheck.js, tag=代理链路检测, img-url=link.circle.system, enabled=true
 
 [http_backend]
-# > BoxJs使用HTTP_backend设置
+# > BoxJs_HTTP_backend
 # > https://chavyleung.gitbook.io/boxjs/
 https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, host=boxjs.com, tag=BoxJS, path=^/, enabled=false
 
