--- a/Shadowrocket/Matrix3.conf
+++ b/Shadowrocket/Matrix3.conf
@@ -1,4 +1,4 @@
-# > Shadowrocket 矩阵配置 Author:Matrix3
+# > 矩阵配置:Shadowrocket Author:Matrix3
 # > 更新时间:2023-05-01 17:10 UTC/GMT +8
 [General]
 # > 旁路系统
@@ -7,7 +7,7 @@ bypass-system = true
 # > 跳过代理
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
 
-# > Tun排除的路由
+# > TUN排除的路由
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
 
 # > DNS服务器
