更新 Matrix3.conf

--- a/Surge/Matrix3.conf
+++ b/Surge/Matrix3.conf
@@ -1,5 +1,5 @@
-# > Surge 矩阵配置 Author:Matrix3
-# > 更新时间:2023-05-01 11:00 UTC/GMT +8
+# > 矩阵配置:Surge        Author:Matrix3
+# > 更新时间:2023-05-23 00:51 UTC/GMT +8
 [General]
 # > 日志级别
 loglevel = notify
@@ -29,7 +29,7 @@ encrypted-dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-que
 wifi-assist = false
 
 # > GEOIP 数据库
-geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+geoip-maxmind-url = https://github.com/Masaiki/GeoIP2-CN/raw/release/Country.mmdb
 
 # > 显示拒绝的错误页面
 show-error-page-for-reject = true
@@ -79,7 +79,7 @@ hide-crash-reporter-request = 0
 
 [Proxy Group]
 # > 自行选择
-自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=🔴订阅链接🟢
+自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=🧸订阅链接🧸
 
 # > 自动选择
 自动选择 = url-test, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, include-other-group=自行选择
