--- a/Surge/Matrix3.conf
+++ b/Surge/Matrix3.conf
@@ -1,16 +1,16 @@
 # > 矩阵配置:Surge        Author:Matrix3
-# > 更新时间:2023-05-23 00:51 UTC/GMT +8
+# > 更新时间:2023-06-19 11:00 UTC/GMT +8
 [General]
 # > 日志级别
 loglevel = notify
 
 # > 测试超时
-test-timeout = 3
+test-timeout = 5
 
-# > 互联网测试网址
-internet-test-url = http://Apple.com
+# > 直连测试
+internet-test-url = http://www.qualcomm.cn/generate_204
 
-# > 代理测试网址
+# > 代理测试
 proxy-test-url = http://cp.cloudflare.com/generate_204
 
 # > 排除简单主机名
@@ -18,6 +18,7 @@ exclude-simple-hostnames = true
 
 # > IPv6 支持
 ipv6 = false
+ipv6-vif = auto
 
 # > DNS 服务器
 dns-server = 223.5.5.5, 119.29.29.29
@@ -37,25 +38,17 @@ show-error-page-for-reject = true
 # > 跳过代理
 skip-proxy = www.abchina.com.cn, localhost, *.local, injections.adguard.org, local.adguard.org, captive.apple.com, guzzoni.apple.com, 0.0.0.0/8, 10.0.0.0/8, 17.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.168.0.0/16, 192.88.99.0/24, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 240.0.0.0/4, 255.255.255.255/32
 
-# > 允许 wifi 访问
-allow-wifi-access = false
-
-# > wifi 访问 http 端口
+# > 代理服务端口
 wifi-access-http-port = 5588
-
-# > wifi 访问 socks5 端口
 wifi-access-socks5-port = 8855
 
-# > 允许热点访问
+# > 允许访问
+allow-wifi-access = false
 allow-hotspot-access = false
 
-# > http api
+# > HTTP-API控制器
 http-api = lmcfmy20@127.0.0.1:3355
-
-# > http api tls
 http-api-tls = false
-
-# > http api 网络仪表板
 http-api-web-dashboard = false
 
 # > udp优先级
@@ -76,6 +69,12 @@ hide-udp = 0
 
 # > 隐藏崩溃报告请求
 hide-crash-reporter-request = 0
+
+# > 关键字过滤器类型
+keyword-filter-type = pattern
+
+# > 关键字过滤器
+keyword-filter = *
 
 [Proxy Group]
 # > 自行选择
@@ -149,20 +148,32 @@ RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/S
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Apple.list,苹果服务 // 苹果服务
 
 # > 局域网络
-RULE-SET,LAN,DIRECT // 局域网络
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/LAN.list,DIRECT // 局域网络
 
 # > 国内规则
-GEOIP,CN,DIRECT // 国内规则
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/ChinaASN.list,DIRECT // 国内规则
 
 # > 最终规则
-FINAL,黑白名单
+FINAL,黑白名单,dns-failed
 
 [URL Rewrite]
-# > 网址重写
-^https?://(www.)?(g|google).cn https://www.google.com 302
+# > 谷歌重定向
+^https?:\/\/(www.)?(g|google)\.cn https://www.google.com 302
+
+# > 谷歌重定向
+^https?:\/\/(ditu|maps).google\.cn https://maps.google.com 302
 
 [MITM]
-# > H2开启/关闭
+# > 跳过服务器证书验证
+skip-server-cert-verify = false
+
+# > 主机名
+hostname = www.google.cn
+
+# > TCP 链接
+tcp-connection = true
+
+# > HTTP 2
 h2 = true
 
 # > 生成证书会生成CA-PASSPHRASE与CA-P12信息
