--- a/Surge/Matrix5.conf
+++ b/Surge/Matrix5.conf
@@ -1,4 +1,4 @@
-# Surge配置 By Matrix 2023-06-26 14:20
+# Surge5配置 By Matrix 2023-06-26 17:00
 [General]
 loglevel = notify
 test-timeout = 5
@@ -34,17 +34,19 @@ keyword-filter = *
 [Proxy Group]
 自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=🔴订阅链接🟢
 自动选择 = url-test, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, include-other-group=自行选择
+
 苹果服务 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 港台番剧 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 国内影视 = select, DIRECT, REJECT, 自行选择, 自动选择, no-alert=0, hidden=0, include-all-proxies=0
 国际媒体 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 全球加速 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 黑白名单 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
+
 香港节点 = url-test, update-interval=0, policy-regex-filter=香港|港|HK|(?i)HongKong, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
 台湾节点 = url-test, update-interval=0, policy-regex-filter=台湾|台|TW|(?i)Taiwan, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
 日本节点 = url-test, update-interval=0, policy-regex-filter=日本|日|JP|(?i)Japan, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
 韩国节点 = url-test, update-interval=0, policy-regex-filter=韩国|韩|KR|(?i)SouthKorea, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
-狮城节点 = url-test, update-interval=0, policy-regex-filter=新加坡|狮|SG|(?i)Singapore, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
+狮城节点 = url-test, update-interval=0, policy-regex-filter=新加坡|新|SG|(?i)Singapore, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
 美国节点 = url-test, update-interval=0, policy-regex-filter=美国|美|US|(?i)UnitedStates, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
 
 [Rule]
