--- a/Surge/Matrix5.conf
+++ b/Surge/Matrix5.conf
@@ -1,4 +1,4 @@
-# Surge5配置 By Matrix 2023-06-26 17:00
+# Surge5配置 By Matrix 2023-06-27 10:28
 [General]
 loglevel = notify
 test-timeout = 5
@@ -7,7 +7,7 @@ proxy-test-url = http://www.gstatic.com/
 allow-wifi-access = false
 allow-hotspot-access = false
 exclude-simple-hostnames = true
-ipv6 = true
+ipv6 = false
 ipv6-vif = auto
 dns-server = 223.5.5.5, 119.29.29.29
 encrypted-dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-query
