--- a/Shadowrocket/Matrix3.conf
+++ b/Shadowrocket/Matrix3.conf
@@ -1,5 +1,5 @@
 # > 矩阵配置:Shadowrocket Author:Matrix3
-# > 更新时间:2023-05-23 00:47 UTC/GMT +8
+# > 更新时间:2023-07-01 00:43 UTC/GMT +8
 [General]
 # > 旁路系统
 bypass-system = true
@@ -126,7 +126,7 @@ IP-CIDR, 100.64.0.0/10, DIRECT
 IP-CIDR, 172.16.0.0/12, DIRECT
 IP-CIDR, 169.254.0.0/16, DIRECT
 IP-CIDR, 192.168.0.0/16, DIRECT
-# IP-CIDR6, fe80::/10, DIRECT
+IP-CIDR6, fe80::/10, DIRECT
 
 # > 国内规则
 GEOIP,CN,DIRECT
@@ -139,11 +139,14 @@ FINAL,黑白名单
 localhost = 127.0.0.1
 
 [URL Rewrite]
-# > 重写
+# > 谷歌
 ^https?://(www.)?g.cn https://www.google.com 302
 ^https?://(www.)?google.cn https://www.google.com 302
 
 [MITM]
+# > 主机名
+hostname = www.google.cn
+
 # > 生成证书会生成CA-PASSPHRASE与CA-P12信息
 # ca-passphrase =
 # ca-p12 =
