--- a/Surge/Matrix5.conf
+++ b/Surge/Matrix5.conf
@@ -1,4 +1,4 @@
-# Surge5配置 By Matrix 2023-06-27 10:28
+# Surge5配置 By Matrix 2023-07-01 00:45
 [General]
 loglevel = notify
 test-timeout = 5
@@ -68,6 +68,6 @@ FINAL,黑白名单,dns-failed
 
 [MITM]
 skip-server-cert-verify = false
-tcp-connection = true
+tcp-connection = false
 h2 = true
 hostname = www.google.cn
