--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,5 +1,5 @@
 # > 矩阵配置:QuantumultX  Author:Matrix3
-# > 更新时间:2023-05-23 00:45 UTC/GMT +8
+# > 更新时间:2023-07-01 00:55 UTC/GMT +8
 [general]
 # > 服务器检查
 server_check_url=http://www.gstatic.com/generate_204
@@ -188,4 +188,4 @@ skip_validating_cert=false
 force_sni_domain_name=false
 
 # > HOSTNAME是主机名多个主机名用英文逗号分隔
-hostname=-consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
+hostname = -*snssdk.com, -*.apple.com, -*huami.com, -*weather-data.apple.com, -*amemv.com, -*consumer.fcbox.com, -*www.google.com, -*.facebook.com, -*.instagram.com, -*.mzstatic.com, -*.crashlytics.com, -*.icloud.com
