--- a/Loon/Matrix3.conf
+++ b/Loon/Matrix3.conf
@@ -1,5 +1,5 @@
 # > 矩阵配置:Loon         Author:Matrix3
-# > 更新时间:2023-05-23 00:45 UTC/GMT +8
+# > 更新时间:2023-07-01 00:57 UTC/GMT +8
 [General]
 # > 接口模式
 interface-mode = auto
@@ -179,4 +179,4 @@ https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rule/
 hostname = *.example.com,*.sample.com
 
 # > 跳过服务器证书验证
-skip-server-cert-verify = true
+skip-server-cert-verify = false
